--- a/shop.html
+++ b/shop.html
@@ -285,7 +285,7 @@
                     <div class="footer-box get-in-touch">
                         <h2 class="widget-title">Get in Touch</h2>
                         <ul>
-                            <li>34/8, East Hukupara, Gifirtok, Sadan.</li>
+                            <li>Egypt.</li>
                             <li>support@fruitkha.com</li>
                             <li>+00 111 222 3333</li>
                         </ul>
@@ -323,7 +323,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12">
-                    <p>Copyrights &copy; 2019 - <a href="https://imransdesign.com/">Imran Hossain</a>, All Rights Reserved.</p>
+                    <p>Copyrights &copy; 2022, All Rights Reserved.</p>
                 </div>
                 <div class="col-lg-6 text-right col-md-12">
                     <div class="social-icons">
